@@ -1,3 +1,7 @@
+2004-05-16  Mark Wielaard  <mark@klomp.org>
+
+	* gnu/testlet/java/io/Writer/Test.java: Add test for null lock.
+
 2004-05-13  Guilhem Lavaux <guilhem@kaffe.org>
 
 	* gnu/testlet/java/text/RuleBasedCollator/jdk11.java: Fixed
